java/versioned_docs/version-1.12/api/class-browsercontext.mdx
---
id: class-browsercontext
title: "BrowserContext"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

BrowserContexts provide a way to operate multiple independent browser sessions.

If a page opens another page, e.g. with a `window.open` call, the popup will belong to the parent page's browser context.

Playwright allows creation of "incognito" browser contexts with `browser.newContext()` method. "Incognito" browser contexts don't write any browsing data to disk.

```java
// Create a new incognito browser context
BrowserContext context = browser.newContext();
// Create a new page inside context.
Page page = context.newPage();
page.navigate("https://example.com");
// Dispose context once it is no longer needed.
context.close();
```


- [BrowserContext.onClose(handler)](./api/class-browsercontext.mdx#browser-context-event-close)
- [BrowserContext.onPage(handler)](./api/class-browsercontext.mdx#browser-context-event-page)
- [BrowserContext.onRequest(handler)](./api/class-browsercontext.mdx#browser-context-event-request)
- [BrowserContext.onRequestFailed(handler)](./api/class-browsercontext.mdx#browser-context-event-request-failed)
- [BrowserContext.onRequestFinished(handler)](./api/class-browsercontext.mdx#browser-context-event-request-finished)
- [BrowserContext.onResponse(handler)](./api/class-browsercontext.mdx#browser-context-event-response)
- [BrowserContext.addCookies(cookies)](./api/class-browsercontext.mdx#browser-context-add-cookies)
- [BrowserContext.addInitScript(script)](./api/class-browsercontext.mdx#browser-context-add-init-script)
- [BrowserContext.browser()](./api/class-browsercontext.mdx#browser-context-browser)
- [BrowserContext.clearCookies()](./api/class-browsercontext.mdx#browser-context-clear-cookies)
- [BrowserContext.clearPermissions()](./api/class-browsercontext.mdx#browser-context-clear-permissions)
- [BrowserContext.close()](./api/class-browsercontext.mdx#browser-context-close)
- [BrowserContext.cookies([urls])](./api/class-browsercontext.mdx#browser-context-cookies)
- [BrowserContext.exposeBinding(name, callback[, options])](./api/class-browsercontext.mdx#browser-context-expose-binding)
- [BrowserContext.exposeFunction(name, callback)](./api/class-browsercontext.mdx#browser-context-expose-function)
- [BrowserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browser-context-grant-permissions)
- [BrowserContext.newPage()](./api/class-browsercontext.mdx#browser-context-new-page)
- [BrowserContext.pages()](./api/class-browsercontext.mdx#browser-context-pages)
- [BrowserContext.route(url, handler)](./api/class-browsercontext.mdx#browser-context-route)
- [BrowserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout)
- [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout)
- [BrowserContext.setExtraHTTPHeaders(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers)
- [BrowserContext.setGeolocation(geolocation)](./api/class-browsercontext.mdx#browser-context-set-geolocation)
- [BrowserContext.setOffline(offline)](./api/class-browsercontext.mdx#browser-context-set-offline)
- [BrowserContext.storageState([options])](./api/class-browsercontext.mdx#browser-context-storage-state)
- [BrowserContext.unroute(url[, handler])](./api/class-browsercontext.mdx#browser-context-unroute)
- [BrowserContext.waitForPage([options], callback)](./api/class-browsercontext.mdx#browser-context-wait-for-page)
- [BrowserContext.tracing()](./api/class-browsercontext.mdx#browser-context-tracing)

## BrowserContext.onClose(handler) {#browser-context-event-close}
- type: &#60;[BrowserContext]&#62;

Emitted when Browser context gets closed. This might happen because of one of the following:
* Browser context is closed.
* Browser application is closed or crashed.
* The [Browser.close()](./api/class-browser.mdx#browser-close) method was called.

## BrowserContext.onPage(handler) {#browser-context-event-page}
- type: &#60;[Page]&#62;

The event is emitted when a new Page is created in the BrowserContext. The page may still be loading. The event will also fire for popup pages. See also [Page.onPopup(handler)](./api/class-page.mdx#page-event-popup) to receive events about popups relevant to a specific page.

The earliest moment that page is available is when it has navigated to the initial url. For example, when opening a popup with `window.open('http://example.com')`, this event will fire when the network request to "http://example.com" is done and its response has started loading in the popup.

```java
Page newPage = context.waitForPage(() -> {
  page.click("a[target=_blank]");
});
System.out.println(newPage.evaluate("location.href"));
```

:::note
Use [Page.waitForLoadState([state, options])](./api/class-page.mdx#page-wait-for-load-state) to wait until the page gets to a particular state (you should not need it in most cases).
:::

## BrowserContext.onRequest(handler) {#browser-context-event-request}
- type: &#60;[Request]&#62;

Emitted when a request is issued from any pages created through this context. The [request] object is read-only. To only listen for requests from a particular page, use [Page.onRequest(handler)](./api/class-page.mdx#page-event-request).

In order to intercept and mutate requests, see [BrowserContext.route(url, handler)](./api/class-browsercontext.mdx#browser-context-route) or [Page.route(url, handler)](./api/class-page.mdx#page-route).

## BrowserContext.onRequestFailed(handler) {#browser-context-event-request-failed}
- type: &#60;[Request]&#62;

Emitted when a request fails, for example by timing out. To only listen for failed requests from a particular page, use [Page.onRequestFailed(handler)](./api/class-page.mdx#page-event-request-failed).

:::note
HTTP Error responses, such as 404 or 503, are still successful responses from HTTP standpoint, so request will complete with [BrowserContext.onRequestFinished(handler)](./api/class-browsercontext.mdx#browser-context-event-request-finished) event and not with [BrowserContext.onRequestFailed(handler)](./api/class-browsercontext.mdx#browser-context-event-request-failed).
:::

## BrowserContext.onRequestFinished(handler) {#browser-context-event-request-finished}
- type: &#60;[Request]&#62;

Emitted when a request finishes successfully after downloading the response body. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for successful requests from a particular page, use [Page.onRequestFinished(handler)](./api/class-page.mdx#page-event-request-finished).

## BrowserContext.onResponse(handler) {#browser-context-event-response}
- type: &#60;[Response]&#62;

Emitted when [response] status and headers are received for a request. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for response events from a particular page, use [Page.onResponse(handler)](./api/class-page.mdx#page-event-response).

## BrowserContext.addCookies(cookies) {#browser-context-add-cookies}
- `cookies` &#60;[List]<`Cookie`>&#62;
  - `setName` &#60;[String]&#62;
  - `setValue` &#60;[String]&#62;
  - `setUrl` &#60;[String]&#62; either url or domain / path are required. Optional.
  - `setDomain` &#60;[String]&#62; either url or domain / path are required Optional.
  - `setPath` &#60;[String]&#62; either url or domain / path are required Optional.
  - `setExpires` &#60;[double]&#62; Unix time in seconds. Optional.
  - `setHttpOnly` &#60;[boolean]&#62; Optional.
  - `setSecure` &#60;[boolean]&#62; Optional.
  - `setSameSite` &#60;`enum SameSiteAttribute { STRICT, LAX, NONE }`&#62; Optional.
- returns: &#60;[void]&#62;

Adds cookies into this browser context. All pages within this context will have these cookies installed. Cookies can be obtained via [BrowserContext.cookies([urls])](./api/class-browsercontext.mdx#browser-context-cookies).

```java
browserContext.addCookies(Arrays.asList(cookieObject1, cookieObject2));
```

## BrowserContext.addInitScript(script) {#browser-context-add-init-script}
- `script` &#60;[String]|[Path]&#62; Script to be evaluated in all pages in the browser context.
- returns: &#60;[void]&#62;

Adds a script which would be evaluated in one of the following scenarios:
* Whenever a page is created in the browser context or is navigated.
* Whenever a child frame is attached or navigated in any page in the browser context. In this case, the script is evaluated in the context of the newly attached frame.

The script is evaluated after the document was created but before any of its scripts were run. This is useful to amend the JavaScript environment, e.g. to seed `Math.random`.

An example of overriding `Math.random` before the page loads:

```js
// preload.js
Math.random = () => 42;
```

```java
// In your playwright script, assuming the preload.js file is in same directory.
browserContext.addInitScript(Paths.get("preload.js"));
```

:::note
The order of evaluation of multiple scripts installed via [BrowserContext.addInitScript(script)](./api/class-browsercontext.mdx#browser-context-add-init-script) and [Page.addInitScript(script)](./api/class-page.mdx#page-add-init-script) is not defined.
:::

## BrowserContext.browser() {#browser-context-browser}
- returns: &#60;[null]|[Browser]&#62;

Returns the browser instance of the context. If it was launched as a persistent context null gets returned.

## BrowserContext.clearCookies() {#browser-context-clear-cookies}
- returns: &#60;[void]&#62;

Clears context cookies.

## BrowserContext.clearPermissions() {#browser-context-clear-permissions}
- returns: &#60;[void]&#62;

Clears all permission overrides for the browser context.

```java
BrowserContext context = browser.newContext();
context.grantPermissions(Arrays.asList("clipboard-read"));
// do stuff ..
context.clearPermissions();
```

## BrowserContext.close() {#browser-context-close}
- returns: &#60;[void]&#62;

Closes the browser context. All the pages that belong to the browser context will be closed.

:::note
The default browser context cannot be closed.
:::

## BrowserContext.cookies([urls]) {#browser-context-cookies}
- `urls` &#60;[String]|[List]<[String]>&#62; Optional list of URLs.
- returns: &#60;[List]<`Cookie`>&#62;
  - `name` &#60;[String]&#62;
  - `value` &#60;[String]&#62;
  - `domain` &#60;[String]&#62;
  - `path` &#60;[String]&#62;
  - `expires` &#60;[double]&#62; Unix time in seconds.
  - `httpOnly` &#60;[boolean]&#62;
  - `secure` &#60;[boolean]&#62;
  - `sameSite` &#60;`enum SameSiteAttribute { STRICT, LAX, NONE }`&#62;

If no URLs are specified, this method returns all cookies. If URLs are specified, only cookies that affect those URLs are returned.

## BrowserContext.exposeBinding(name, callback[, options]) {#browser-context-expose-binding}
- `name` &#60;[String]&#62; Name of the function on the window object.
- `callback` &#60;`BindingCallback`&#62; Callback function that will be called in the Playwright's context.
- `options` &#60;`BrowserContext.ExposeBindingOptions`&#62;
  - `setHandle` &#60;[boolean]&#62; Whether to pass the argument as a handle, instead of passing by value. When passing a handle, only one argument is supported. When passing by value, multiple arguments are supported.
- returns: &#60;[void]&#62;

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`. If the `callback` returns a [Promise], it will be awaited.

The first argument of the `callback` function contains information about the caller: `{ browserContext: BrowserContext, page: Page, frame: Frame }`.

See [Page.exposeBinding(name, callback[, options])](./api/class-page.mdx#page-expose-binding) for page-only version.

An example of exposing page URL to all frames in all pages in the context:

```java
import com.microsoft.playwright.*;

public class Example {
  public static void main(String[] args) {
    try (Playwright playwright = Playwright.create()) {
      BrowserType webkit = playwright.webkit()
      Browser browser = webkit.launch(new BrowserType.LaunchOptions().setHeadless(false));
      BrowserContext context = browser.newContext();
      context.exposeBinding("pageURL", (source, args) -> source.page().url());
      Page page = context.newPage();
      page.setContent("<script>\n" +
        "  async function onClick() {\n" +
        "    document.querySelector('div').textContent = await window.pageURL();\n" +
        "  }\n" +
        "</script>\n" +
        "<button onclick=\"onClick()\">Click me</button>\n" +
        "<div></div>");
      page.click("button");
    }
  }
}
```

An example of passing an element handle:

```java
context.exposeBinding("clicked", (source, args) -> {
  ElementHandle element = (ElementHandle) args[0];
  System.out.println(element.textContent());
  return null;
}, new BrowserContext.ExposeBindingOptions().setHandle(true));
page.setContent("" +
  "<script>\n" +
  "  document.addEventListener('click', event => window.clicked(event.target));\n" +
  "</script>\n" +
  "<div>Click me</div>\n" +
  "<div>Or click me</div>\n");
```

## BrowserContext.exposeFunction(name, callback) {#browser-context-expose-function}
- `name` &#60;[String]&#62; Name of the function on the window object.
- `callback` &#60;`FunctionCallback`&#62; Callback function that will be called in the Playwright's context.
- returns: &#60;[void]&#62;

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`.

If the `callback` returns a [Promise], it will be awaited.

See [Page.exposeFunction(name, callback)](./api/class-page.mdx#page-expose-function) for page-only version.

An example of adding a `sha256` function to all pages in the context:

```java
import com.microsoft.playwright.*;

import java.nio.charset.StandardCharsets;
import java.security.MessageDigest;
import java.security.NoSuchAlgorithmException;
import java.util.Base64;

public class Example {
  public static void main(String[] args) {
    try (Playwright playwright = Playwright.create()) {
      BrowserType webkit = playwright.webkit()
      Browser browser = webkit.launch(new BrowserType.LaunchOptions().setHeadless(false));
      context.exposeFunction("sha256", args -> {
        String text = (String) args[0];
        MessageDigest crypto;
        try {
          crypto = MessageDigest.getInstance("SHA-256");
        } catch (NoSuchAlgorithmException e) {
          return null;
        }
        byte[] token = crypto.digest(text.getBytes(StandardCharsets.UTF_8));
        return Base64.getEncoder().encodeToString(token);
      });
      Page page = context.newPage();
      page.setContent("<script>\n" +
        "  async function onClick() {\n" +
        "    document.querySelector('div').textContent = await window.sha256('PLAYWRIGHT');\n" +
        "  }\n" +
        "</script>\n" +
        "<button onclick=\"onClick()\">Click me</button>\n" +
        "<div></div>\n");
      page.click("button");
    }
  }
}
```

## BrowserContext.grantPermissions(permissions[, options]) {#browser-context-grant-permissions}
- `permissions` &#60;[List]<[String]>&#62; A permission or an array of permissions to grant. Permissions can be one of the following values:
  * `'geolocation'`
  * `'midi'`
  * `'midi-sysex'` (system-exclusive midi)
  * `'notifications'`
  * `'push'`
  * `'camera'`
  * `'microphone'`
  * `'background-sync'`
  * `'ambient-light-sensor'`
  * `'accelerometer'`
  * `'gyroscope'`
  * `'magnetometer'`
  * `'accessibility-events'`
  * `'clipboard-read'`
  * `'clipboard-write'`
  * `'payment-handler'`
- `options` &#60;`BrowserContext.GrantPermissionsOptions`&#62;
  - `setOrigin` &#60;[String]&#62; The [origin] to grant permissions to, e.g. "https://example.com".
- returns: &#60;[void]&#62;

Grants specified permissions to the browser context. Only grants corresponding permissions to the given origin if specified.

## BrowserContext.newPage() {#browser-context-new-page}
- returns: &#60;[Page]&#62;

Creates a new page in the browser context.

## BrowserContext.pages() {#browser-context-pages}
- returns: &#60;[List]<[Page]>&#62;

Returns all open pages in the context.

## BrowserContext.route(url, handler) {#browser-context-route}
- `url` &#60;[String]|[Pattern]|[Predicate]<[String]>&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while routing.
- `handler` &#60;[Consumer]<[Route]>&#62; handler function to route the request.
- returns: &#60;[void]&#62;

Routing provides the capability to modify network requests that are made by any page in the browser context. Once route is enabled, every request matching the url pattern will stall unless it's continued, fulfilled or aborted.

An example of a naive handler that aborts all image requests:

```java
BrowserContext context = browser.newContext();
context.route("**/*.{png,jpg,jpeg}", route -> route.abort());
Page page = context.newPage();
page.navigate("https://example.com");
browser.close();
```

or the same snippet using a regex pattern instead:

```java
BrowserContext context = browser.newContext();
context.route(Pattern.compile("(\\.png$)|(\\.jpg$)"), route -> route.abort());
Page page = context.newPage();
page.navigate("https://example.com");
browser.close();
```

It is possible to examine the request to decide the route action. For example, mocking all requests that contain some post data, and leaving all other requests as is:

```java
context.route("/api/**", route -> {
  if (route.request().postData().contains("my-string"))
    route.fulfill(new Route.FulfillOptions().setBody("mocked-data"));
  else
    route.resume();
});
```

Page routes (set up with [Page.route(url, handler)](./api/class-page.mdx#page-route)) take precedence over browser context routes when request matches both handlers.

To remove a route with its handler you can use [BrowserContext.unroute(url[, handler])](./api/class-browsercontext.mdx#browser-context-unroute).

:::note
Enabling routing disables http cache.
:::

## BrowserContext.setDefaultNavigationTimeout(timeout) {#browser-context-set-default-navigation-timeout}
- `timeout` &#60;[double]&#62; Maximum navigation time in milliseconds
- returns: &#60;[void]&#62;

This setting will change the default maximum navigation time for the following methods and related shortcuts:
* [Page.goBack([options])](./api/class-page.mdx#page-go-back)
* [Page.goForward([options])](./api/class-page.mdx#page-go-forward)
* [Page.navigate(url[, options])](./api/class-page.mdx#page-goto)
* [Page.reload([options])](./api/class-page.mdx#page-reload)
* [Page.setContent(html[, options])](./api/class-page.mdx#page-set-content)
* [Page.waitForNavigation([options], callback)](./api/class-page.mdx#page-wait-for-navigation)

:::note
[Page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) and [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) take priority over [BrowserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout).
:::

## BrowserContext.setDefaultTimeout(timeout) {#browser-context-set-default-timeout}
- `timeout` &#60;[double]&#62; Maximum time in milliseconds
- returns: &#60;[void]&#62;

This setting will change the default maximum time for all the methods accepting `timeout` option.

:::note
[Page.setDefaultNavigationTimeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout), [Page.setDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) and [BrowserContext.setDefaultNavigationTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout) take priority over [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
:::

## BrowserContext.setExtraHTTPHeaders(headers) {#browser-context-set-extra-http-headers}
- `headers` &#60;[Map]<[String], [String]>&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.
- returns: &#60;[void]&#62;

The extra HTTP headers will be sent with every request initiated by any page in the context. These headers are merged with page-specific extra HTTP headers set with [Page.setExtraHTTPHeaders(headers)](./api/class-page.mdx#page-set-extra-http-headers). If page overrides a particular header, page-specific header value will be used instead of the browser context header value.

:::note
[BrowserContext.setExtraHTTPHeaders(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers) does not guarantee the order of headers in the outgoing requests.
:::

## BrowserContext.setGeolocation(geolocation) {#browser-context-set-geolocation}
- `geolocation` &#60;[null]|Geolocation&#62;
  - `setLatitude` &#60;[double]&#62; Latitude between -90 and 90.
  - `setLongitude` &#60;[double]&#62; Longitude between -180 and 180.
  - `setAccuracy` &#60;[double]&#62; Non-negative accuracy value. Defaults to `0`.
- returns: &#60;[void]&#62;

Sets the context's geolocation. Passing `null` or `undefined` emulates position unavailable.

```java
browserContext.setGeolocation(new Geolocation(59.95, 30.31667));
```

:::note
Consider using [BrowserContext.grantPermissions(permissions[, options])](./api/class-browsercontext.mdx#browser-context-grant-permissions) to grant permissions for the browser context pages to read its geolocation.
:::

## BrowserContext.setOffline(offline) {#browser-context-set-offline}
- `offline` &#60;[boolean]&#62; Whether to emulate network being offline for the browser context.
- returns: &#60;[void]&#62;

## BrowserContext.storageState([options]) {#browser-context-storage-state}
- `options` &#60;`BrowserContext.StorageStateOptions`&#62;
  - `setPath` &#60;[Path]&#62; The file path to save the storage state to. If `path` is a relative path, then it is resolved relative to current working directory. If no path is provided, storage state is still returned, but won't be saved to the disk.
- returns: &#60;[String]&#62;

Returns storage state for this browser context, contains current cookies and local storage snapshot.

## BrowserContext.unroute(url[, handler]) {#browser-context-unroute}
- `url` &#60;[String]|[Pattern]|[Predicate]<[String]>&#62; A glob pattern, regex pattern or predicate receiving [URL] used to register a routing with [BrowserContext.route(url, handler)](./api/class-browsercontext.mdx#browser-context-route).
- `handler` &#60;[Consumer]<[Route]>&#62; Optional handler function used to register a routing with [BrowserContext.route(url, handler)](./api/class-browsercontext.mdx#browser-context-route).
- returns: &#60;[void]&#62;

Removes a route created with [BrowserContext.route(url, handler)](./api/class-browsercontext.mdx#browser-context-route). When `handler` is not specified, removes all routes for the `url`.

## BrowserContext.waitForPage([options], callback) {#browser-context-wait-for-page}
- `options` &#60;`BrowserContext.WaitForPageOptions`&#62;
  - `setPredicate` &#60;[Predicate]<[Page]>&#62; Receives the [Page] object and resolves to truthy value when the waiting should resolve.
  - `setTimeout` &#60;[double]&#62; Maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.setDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
- `callback` &#60;[Runnable]&#62; Callback that performs the action triggering the event.
- returns: &#60;[Page]&#62;

Performs action and waits for a new [Page] to be created in the context. If predicate is provided, it passes [Page] value into the `predicate` function and waits for `predicate(event)` to return a truthy value. Will throw an error if the context closes before new [Page] is created.

## BrowserContext.tracing() {#browser-context-tracing}
- returns: &#60;[Tracing]&#62;

[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"